# dict8r

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs
tests/: unit_tests.rs
