# https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "dict8r"
version = "0.1.0"
edition = "2021"

# https://crates.io/crates/
[dependencies]
clap = { version = "^4.5.0", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
simple_logger = "4.3.3"
thiserror = "1.0.61"
regex = "1.10.4"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"